--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -149,12 +149,12 @@
  
     <context-param>
         <param-name>user</param-name>
-        <param-value>YOUR_EMAIL</param-value>
+        <param-value>khoidt4@gmail.com</param-value>
     </context-param>
  
     <context-param>
         <param-name>pass</param-name>
-        <param-value>YOUR_PASSWORD</param-value>
+        <param-value>mu2345678</param-value>
     </context-param>
   
   <filter-mapping>
